[rk-grpc] refactor grpc [commit:dongxuny]
